feat: words fix

--- a/鱼旗之歌.md
+++ b/鱼旗之歌.md
@@ -30,7 +30,7 @@
 🌟 **相似点：**
 - 他们都是 **前线战士**，执行“上层”的决策。
 - 他们的劳动往往 **难以被看见，被认可**。
-- 他们在痛苦中喊牛，有人愿意“无悔”付出，有人则逐渐变得麻木。
+- 他们在痛苦中挣扎，有人愿意“无悔”付出，有人则逐渐变得麻木。
 
 ---
 
@@ -44,14 +44,14 @@
 
 🌟 **相似点**：
 - 大鱼是导向，小鱼是执行。
-- 架构师是维纳，程序员是具体落地。
+- 架构师是引领者，程序员是具体落地。
 
 ---
 
 ## **4. “嚼啊嚼之歌” vs. 程序员的时间贫穷**
 
-👉 **Q：《窗边的小豆豆》里的孩子为什么唱“嚼啊嚼之歌”？**  
-🔹 **A：这是一首鼓励孩子健康成长的歌，但战争时期，食物短缺，“嚼啊嚼”成了一种讽刺。孩子努力吃饭，可他们连饭都没有。**
+👉 **Q：《窗边的小豆豆》里的“嚼啊嚼之歌”来自哪里？**  
+🔹 **A：这是一首在巴学园里流传的童谣，原本是鼓励孩子健康成长的歌。但在战争时期，食物短缺，“嚼啊嚼”成了一种讽刺。孩子努力吃饭，可他们连饭都没有。**
 
 👉 **Q：程序员为什么觉得“时间不够”？**  
 🔹 **A：他们想学习新技术、提升自己，但被业务需求、会议、加班榨干，连喘息的时间都没有。**
